--- a/SmogApp/MapViewController/AnnotationXib.xib
+++ b/SmogApp/MapViewController/AnnotationXib.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="206" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aaa" translatesAutoresizingMaskIntoConstraints="NO" id="Y9W-i5-wxX">
+                <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aaa" translatesAutoresizingMaskIntoConstraints="NO" id="Y9W-i5-wxX">
                     <rect key="frame" x="0.0" y="0.0" width="206" height="150"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Godzina pomiaru" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9N-rJ-Fn5">
@@ -24,27 +24,7 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5f-Nn-uUM">
-                    <rect key="frame" x="159" y="8" width="33" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="bpx-6w-Bn0"/>
-                        <constraint firstAttribute="width" constant="33" id="f4P-YG-EiW"/>
-                    </constraints>
-                    <state key="normal" title="Alert"/>
-                    <connections>
-                        <action selector="alertButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="va1-XL-RbN"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zanieczyeszczenie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xae-x0-r2x">
-                    <rect key="frame" x="4" y="58" width="194" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="32" id="3Zb-LA-PJt"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
-                    <color key="textColor" red="1" green="0.13986433279999999" blue="0.091587552219999993" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adres" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tnc-4N-aEv">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Adres" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tnc-4N-aEv">
                     <rect key="frame" x="8" y="16" width="143" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="LjN-BN-ekz"/>
@@ -71,23 +51,30 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zanieczyeszczenie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xae-x0-r2x">
+                    <rect key="frame" x="6" y="40" width="194" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="32" id="3Zb-LA-PJt"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
+                    <color key="textColor" red="1" green="0.13986433279999999" blue="0.091587552219999993" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Wr3-Gu-lDf" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="3CU-MZ-kzu"/>
-                <constraint firstItem="H5f-Nn-uUM" firstAttribute="leading" secondItem="Tnc-4N-aEv" secondAttribute="trailing" constant="8" id="66w-m0-xMY"/>
                 <constraint firstItem="QJw-aj-JCn" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.52" id="79y-VU-pJc"/>
                 <constraint firstItem="QJw-aj-JCn" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="8SH-pP-FaC"/>
                 <constraint firstItem="Tnc-4N-aEv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="BZ9-GM-8cb"/>
-                <constraint firstItem="QJw-aj-JCn" firstAttribute="top" secondItem="Xae-x0-r2x" secondAttribute="bottom" constant="4" id="BkL-sK-pM9"/>
+                <constraint firstItem="QJw-aj-JCn" firstAttribute="top" secondItem="Xae-x0-r2x" secondAttribute="bottom" constant="22" id="BkL-sK-pM9"/>
                 <constraint firstItem="Y9W-i5-wxX" firstAttribute="centerX" secondItem="Xae-x0-r2x" secondAttribute="centerX" id="F6L-cg-5k3"/>
-                <constraint firstAttribute="trailing" secondItem="H5f-Nn-uUM" secondAttribute="trailing" constant="14" id="HU7-Ao-B3q"/>
                 <constraint firstItem="Y9W-i5-wxX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IGQ-c0-PgV"/>
                 <constraint firstItem="Wr3-Gu-lDf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="IKb-yc-CbU"/>
-                <constraint firstAttribute="trailing" secondItem="Xae-x0-r2x" secondAttribute="trailing" constant="8" id="JlU-pw-mDB"/>
+                <constraint firstAttribute="trailing" secondItem="Xae-x0-r2x" secondAttribute="trailing" constant="6" id="JlU-pw-mDB"/>
                 <constraint firstItem="Tnc-4N-aEv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="ME2-bO-Bgl"/>
                 <constraint firstAttribute="trailing" secondItem="QJw-aj-JCn" secondAttribute="trailing" constant="8" id="Ma3-17-Sgf"/>
-                <constraint firstItem="Wr3-Gu-lDf" firstAttribute="top" secondItem="Xae-x0-r2x" secondAttribute="bottom" constant="4" id="Opm-5B-s0z"/>
+                <constraint firstItem="Wr3-Gu-lDf" firstAttribute="top" secondItem="Xae-x0-r2x" secondAttribute="bottom" constant="22" id="Opm-5B-s0z"/>
                 <constraint firstItem="q9N-rJ-Fn5" firstAttribute="top" secondItem="QJw-aj-JCn" secondAttribute="bottom" constant="4" id="Uwb-Ko-410"/>
                 <constraint firstItem="QJw-aj-JCn" firstAttribute="leading" secondItem="Wr3-Gu-lDf" secondAttribute="trailing" constant="4" id="VPn-ad-W3Z"/>
                 <constraint firstAttribute="bottom" secondItem="Y9W-i5-wxX" secondAttribute="bottom" id="XV5-gS-dud"/>
@@ -95,11 +82,10 @@
                 <constraint firstAttribute="bottom" secondItem="q9N-rJ-Fn5" secondAttribute="bottom" constant="4" id="eY7-R7-l98"/>
                 <constraint firstItem="q9N-rJ-Fn5" firstAttribute="top" secondItem="Wr3-Gu-lDf" secondAttribute="bottom" constant="4" id="eox-6n-mTD"/>
                 <constraint firstItem="Y9W-i5-wxX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fT4-z9-xL3"/>
-                <constraint firstItem="Xae-x0-r2x" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" id="giB-2A-HvU"/>
+                <constraint firstItem="Xae-x0-r2x" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="giB-2A-HvU"/>
                 <constraint firstAttribute="trailing" secondItem="q9N-rJ-Fn5" secondAttribute="trailing" constant="8" id="gym-cu-xts"/>
                 <constraint firstItem="Wr3-Gu-lDf" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="iOR-uP-zub"/>
                 <constraint firstItem="q9N-rJ-Fn5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="kCR-dK-xsn"/>
-                <constraint firstItem="H5f-Nn-uUM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="t6K-FF-rdT"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
@@ -120,7 +106,6 @@
             </variation>
             <connections>
                 <outlet property="adresLabel" destination="Tnc-4N-aEv" id="Vg6-Z7-jn0"/>
-                <outlet property="alertButton" destination="H5f-Nn-uUM" id="ByH-DR-jsZ"/>
                 <outlet property="hourLabel" destination="q9N-rJ-Fn5" id="rBk-fr-sso"/>
                 <outlet property="levelLabel" destination="Wr3-Gu-lDf" id="Vwy-mf-c7z"/>
                 <outlet property="pollutionLabel" destination="Xae-x0-r2x" id="gzM-ky-ka8"/>
